# monorepo

./: .dockerignore  .env_  .gitignore  .gitmodules  .tool-versions  LICENSE.md  README.md  docker-compose.yaml
.github/workflows/: platform_deploy.yaml  platform_docs.yaml  platform_lint.yaml  platform_test.yaml  site_deploy.yaml  worker_app_release.yaml  worker_cli_release.yaml
apps/appchain/: README.md  package-lock.json  package.json  tsconfig.json
apps/appchain_web/: README.md  package.json
apps/onchain/: .gitignore  README.md  pyproject.toml
apps/onchain/circuits/leaf/: .gitignore  Nargo.toml  Verifier.toml
apps/onchain/circuits/leaf/src/: main.nr
apps/onchain/circuits/tree/: Nargo.toml  Verifier.toml
apps/onchain/circuits/tree/src/: main.nr
apps/onchain/contracts/: attest.vy  challenge.vy  stake.vy  token.vy
apps/onchain/contracts/interfaces/: stake.vyi  verifier_leaf.vyi  verifier_tree.vyi
apps/onchain_web/: README.md  package.json
apps/platform/: .credo.exs  .dockerignore  .gitignore  .iex.exs  .recode.exs  Dockerfile  fly.toml  mix.exs
apps/site/: .dockerignore  .gitignore  Dockerfile  fly.toml  next.config.js  package-lock.json  package.json  tailwind.config.js  theme.config.jsx
apps/worker_app/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
apps/worker_cli/: .dockerignore  .gitignore  Dockerfile  README.md  bun.lockb  fly.toml  package-lock.json  package.json  tsconfig.json
apps/worker_sdk/: .gitignore  (+4 more)
nbs/: .gitignore  pyproject.toml
sh/: dcrun.sh  install.sh  release.sh  secrets.sh  setup.sh
(+164 files in other folders)
